* Removed top margin from modal on mobile * Fixed Gravatars (I was passing in the comment_author instead of comment_author_email)

--- a/assets/css/partials/front-end/_modal.scss
+++ b/assets/css/partials/front-end/_modal.scss
@@ -53,7 +53,7 @@
     .ask-me-anything-popup & {
         -webkit-box-shadow: 0 5px 15px rgba(0,0,0,.5);
         box-shadow: 0 5px 15px rgba(0,0,0,.5);
-        margin-top: 50px;
+        margin: 0;
         -webkit-transform: translate(0,0);
         -ms-transform: translate(0,0);
         -o-transform: translate(0,0);
