--- a/assets/css/partials/front-end/elements/_buttons.scss
+++ b/assets/css/partials/front-end/elements/_buttons.scss
@@ -77,6 +77,8 @@
     -webkit-appearance: none;
 
     &:hover {
+        background: none;
+        border: none;
         color: #909090;
     }
 }
